--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -15,6 +15,7 @@
     </style>
   </head>
   <body>
+    <button style="background-color: orange; font-size: 18px;">inline method</button>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
     <button>Inline Method</button>
