--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p class="alert-text">
-    <p>Number 1 - I'm a class!</p>
+
+    <p class="alert-text">Number 1 - I'm a class!</p>
     </p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <div id="hueta">Number 2 - I'm one ID.</div>
+    <p class="alert-text" id="gop">Number 3 - I'm a class, but cooler!</p>
+    <div id="top">Number 4 - I'm another ID.</div>
+    <p class="alert-text">Number 5 - I'm a class!</p>
   </body>
 </html>
