--- a/margin-and-padding/02-margin-and-padding-2/index.html
+++ b/margin-and-padding/02-margin-and-padding-2/index.html
@@ -7,6 +7,7 @@
     <title>Margin and Padding exercise 2</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="rewrite.css">
+    <link rel="stylesheet" href="variables.css">
   </head>
   <body>
     <div class="card">
